# sprockets-postgres

./: CONTRIBUTING.md  LICENSE  README.md  README.rst  bootstrap  docker-compose.yml  setup.cfg  setup.py  sprockets_postgres.py  tests.py
.github/workflows/: deploy.yaml  testing.yaml
docs/: application.rst  conf.py  configuration.rst  connector.rst  example.rst  exceptions.rst  index.rst  query_result.rst  request_handler.rst  requirements.txt  typing.rst
fixtures/: testing.sql
sprockets_postgres/: __init__.py  __version__.py
