[metadata]
name = sprockets-postgres
version = file: VERSION
description = An asynchronous Postgres client and mixin for Tornado applications
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = BSD 3-Clause License
license-file = LICENSE
home-page = https://github.com/sprockets/sprockets-postgres
project_urls =
    Bug Tracker = https://github.com/sprockets/sprockets-postgres/issues
    Documentation = https://sprockets-postgres.readthedocs.io
    Source Code = https://github.com/sprockets/sprockets-postgres/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Communications
    Topic :: Internet
    Topic :: Software Development
    Typing :: Typed
requires-dist = setuptools
keywords =
    postgres
    python3
    tornado

[options]
include_package_data = True
install_requires =
    aiopg>=1.0.0,<2
    sprockets.http>=2.1.1,<3
    tornado>=6,<7
pymodules =
    sprockets_postgres
zip_safe = true

[options.extras_require]
testing =
    coverage
    flake8
    flake8-comprehensions
    flake8-deprecated
    flake8-import-order
    flake8-print
    flake8-quotes
    flake8-rst-docstrings
    flake8-tuple
    pygments

[coverage:run]
branch = True
command_line = -m unittest discover tests --verbose
data_file = build/.coverage

[coverage:report]
show_missing = True
include =
    sprockets_postgres.py

[coverage:html]
directory = build/coverage

[coverage:xml]
output = build/coverage.xml

[flake8]
application-import-names = sprockets_postgres,tests
exclude = build,docs,env
import-order-style = pycharm
rst-roles = attr,class,const,data,exc,func,meth,mod,obj,ref,yields
